lutris (0.3.5) trusty; urgency=medium

  * All runners now use the version hosted on lutris.net (auto-install!)
  * Desura and Virtual Jaguar support
  * Browse installed games' files from the context menu
  * New "Connected" status indicator in the status bar
  * New small icons and small banners style (switch in View menu)
  * Better path management
  * Consistent configuration loading
  * UI Fixes
  * Runner fixes
  * Even more fixes

 -- Mathieu Comandon <strycore@gmail.com>  Wed, 10 Sep 2014 16:41:10 +0200

lutris (0.3.4) quantal; urgency=low

  * Initial SDLMess Support
  * Fixes for Gens and Hatari runners
  * Various bugfixes

 -- Mathieu Comandon <strycore@gmail.com>  Sat, 8 Feb 2014 19:14:18 +0200

lutris (0.3.3) quantal; urgency=low

  * Improved design of installer dialog and main window
  * Prevent users from deleting important files when uninstalling games
  * Show help screen on first start
  * Support for Amiga CD32 games
  * Dosbox install scripts can now run DOS executables
  * Better xrandr support
  * Give option to restrict display to a single monitor while in-game
  * Improve contextual menu in client (Install, uninstall, manually add)
  * Show dialog when trying to install games with no script.

 -- Mathieu Comandon <strycore@gmail.com>  Sat, 25 Jan 2014 17:58:00 +0200

lutris (0.3.2) quantal; urgency=low

  * Support for Steam for Linux
  * Allow switching from Steam for Linux <-> Wine
  * Option to show only installed games in UI
  * Ability to automatically migrate local database
  * Misc bugfixes

 -- Mathieu Comandon <strycore@gmail.com>  Sun, 15 Dec 2013 17:51:00 +0200

lutris (0.3.1) quantal; urgency=low

  * Support for Wine installers
  * Library sync with Lutris.net
  * Misc bugfixes

 -- Mathieu Comandon <strycore@gmail.com>  Sat, 20 Jul 2013 21:55:37 +0200

lutris (0.3.0) quantal; urgency=low

  * Initial release of Lutris 0.3
  * Support for game installers
  * Support for lutris.net authentication