@@ -1,3 +1,7 @@
+
+  * Added ScummVM options: aspect correction, subtitles
+  * Fixed Wine games install failing when there is a space in the setup file path
+
 lutris (0.3.5) trusty; urgency=medium
 
   * All runners now use the version hosted on lutris.net (auto-install!)
